Very rough loading & drawing of `.obj` mesh files. Based on [mesh-viewer](https://github.com/amanshenoy/mesh-viewer).

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "app/lib/implot"]
 	path = app/lib/implot
 	url = git@github.com:epezent/implot.git
+[submodule "app/lib/glm"]
+	path = app/lib/glm
+	url = git@github.com:g-truc/glm.git
