--- a/app/lib/CMakeLists.txt
+++ b/app/lib/CMakeLists.txt
@@ -31,5 +31,4 @@ target_include_directories(IMGUI
     )
 
 find_package(OpenGL REQUIRED)
-target_link_libraries(IMGUI PUBLIC ${OPENGL_LIBRARIES})
-target_link_libraries(IMGUI PUBLIC SDL3 ${CMAKE_DL_LIBS})
+target_link_libraries(IMGUI PUBLIC SDL3 OpenGL::GL)
