Configure vscode cmake extension to build in `/app` subdirectory. Simplify & fix copying resource files to build dir. All resource paths now absolute from build directory (e.g. `res/shaders/...`). Move `app/data` dir (which only has `.obj` files) to `app/res/obj`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cmake.sourceDirectory": "${workspaceFolder}/app"
+  "cmake.sourceDirectory": "${workspaceFolder}/app",
+  "cmake.buildDirectory": "${workspaceFolder}/app/build"
 }
