--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
   "cmake.sourceDirectory": "${workspaceFolder}/app",
-  "cmake.buildDirectory": "${workspaceFolder}/app/build"
+  "cmake.buildDirectory": "${workspaceFolder}/app/build",
+  "files.associations": {
+    "iostream": "cpp",
+    "iosfwd": "cpp",
+    "vector": "cpp",
+    "string": "cpp"
+  }
 }
