Mesh controls improvements: Make light colors into color edits. Remove (currently unimplemented) mouse scrolling. Remove some wordy text. Use new ImGui `SeparatorText`.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "iostream": "cpp",
     "iosfwd": "cpp",
     "vector": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "stdexcept": "cpp"
   }
 }
