--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "app/lib/glm"]
 	path = app/lib/glm
 	url = git@github.com:g-truc/glm.git
+[submodule "app/lib/nativefiledialog"]
+	path = app/lib/nativefiledialog
+	url = git@github.com:btzy/nativefiledialog-extended.git
