--- a/app/lib/CMakeLists.txt
+++ b/app/lib/CMakeLists.txt
@@ -36,3 +36,7 @@ target_link_libraries(IMGUI PUBLIC SDL3 OpenGL::GL)
 #=================== nativefiledialog ===================
 
 add_subdirectory(nativefiledialog)
+
+#=================== fmt ===================
+
+add_subdirectory(fmt)
