Add text editor for faust code. Updates Faust DSP every character.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -10,6 +10,7 @@ file(
     GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp
     lib/implot/implot.cpp lib/implot/implot_items.cpp lib/implot/implot_demo.cpp
     lib/fmt/src/format.cc
+    lib/imgui/misc/cpp/imgui_stdlib.cpp
 )
 
 # Recursively copy the res directory to the build directory.
@@ -17,7 +18,7 @@ file(COPY res DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-include_directories(lib/implot lib/glm lib/miniaudio lib/fmt/include lib/faust/architecture)
+include_directories(lib/implot lib/glm lib/miniaudio lib/fmt/include lib/faust/architecture lib/imgui/misc/cpp)
 
 find_package(GLEW REQUIRED)
 # `dynamiclib` is faust.
