Oops, I apparently didn't add Faust as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "app/lib/fmt"]
 	path = app/lib/fmt
 	url = git@github.com:fmtlib/fmt.git
+[submodule "app/lib/faust"]
+	path = app/lib/faust
+	url = git@github.com:grame-cncm/faust.git
