--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "app/lib/faust"]
 	path = app/lib/faust
 	url = git@github.com:grame-cncm/faust.git
+[submodule "app/lib/miniaudio"]
+	path = app/lib/miniaudio
+	url = git@github.com:mackron/miniaudio.git
