--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.20)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_C_STANDARD 17)
+set(CMAKE_C_COMPILER "clang")
+set(CMAKE_CXX_COMPILER "clang++")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -stdlib=libc++")
 
-project(mesh2audio LANGUAGES C CXX OBJC)
+project(mesh2audio LANGUAGES C CXX)
 
 add_subdirectory(lib)
 
