Use `lld` llvm loader instead of system loader.
Actually builds on Ubuntu now, but doesn't run bc of OpenGL craziness.
I gave up on getting the app to run on Ubuntu, and just focused on
getting `mesh2faust` working.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,9 @@
     "system_error": "cpp",
     "typeinfo": "cpp",
     "unordered_map": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "string_view": "cpp",
+    "span": "cpp",
+    "queue": "cpp"
   }
 }
