Immplement loading a mesh by extruding a 2d profile from an SVG file. Add bell SVGs to `res` dir.

--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,6 @@
 [submodule "app/lib/ImGuizmo"]
 	path = app/lib/ImGuizmo
 	url = git@github.com:CedricGuillemet/ImGuizmo.git
+[submodule "app/lib/nanosvg"]
+	path = app/lib/nanosvg
+	url = git@github.com:memononen/nanosvg.git
