Add loading modals for tet mesh / dsp code gen

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory(${Mesh2FaustDir})
 
 include_directories(
     lib/implot
+    lib/imspinner
     lib/glm
     lib/miniaudio
     lib/fmt/include
