--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,6 @@
 [submodule "app/lib/nanosvg"]
 	path = app/lib/nanosvg
 	url = git@github.com:memononen/nanosvg.git
+[submodule "app/lib/imspinner"]
+	path = app/lib/imspinner
+	url = git@github.com:dalerank/imspinner.git
