Tesselate the 2D profile into triangles. Optionally display tesselation. File menu option to export profile tesselation `.obj` file.

--- a/.gitmodules
+++ b/.gitmodules
@@ -36,3 +36,6 @@
 [submodule "app/lib/cinolib"]
 	path = app/lib/cinolib
 	url = git@github.com:mlivesu/cinolib.git
+[submodule "app/lib/earcut"]
+	path = app/lib/earcut
+	url = git@github.com:mapbox/earcut.hpp.git
