--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "app/lib/miniaudio"]
 	path = app/lib/miniaudio
 	url = git@github.com:mackron/miniaudio.git
+[submodule "app/lib/ImGuizmo"]
+	path = app/lib/ImGuizmo
+	url = git@github.com:CedricGuillemet/ImGuizmo.git
