--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_C_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -stdlib=libc++ -fexperimental-library")
 
 project(mesh2audio LANGUAGES C CXX)
 if(APPLE)
@@ -42,6 +42,7 @@ include_directories(
     lib/nanosvg/src
     lib/earcut/include/mapbox
     lib/CDT/CDT/include
+    lib/date/include/date
     ${Mesh2FaustDir}/src
 )
 
