Add a 'Mesh->RealImpact' tab, to load the [RealImpact](https://github.com/samuel-clarke/RealImpact) data in the same dir as the loaded obj mesh (using new [libnpy](https://github.com/llohse/libnpy) dep).

--- a/.gitmodules
+++ b/.gitmodules
@@ -42,3 +42,9 @@
 [submodule "app/lib/date"]
 	path = app/lib/date
 	url = git@github.com:HowardHinnant/date.git
+[submodule "app/lib/libnpy"]
+	path = app/lib/libnpy
+	url = git@github.com:llohse/libnpy.git
+[submodule "app/app/lib/libnpy"]
+	path = app/app/lib/libnpy
+	url = git@github.com:llohse/libnpy.git
