Split out lighting/camera/guizmo/other scene-global stuff (and their config UI) out of static vars on `Mesh` into instance vars on a new `Scene` object.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,9 @@
     "cinttypes": "cpp",
     "charconv": "cpp",
     "complex": "cpp",
-    "algorithm": "cpp"
+    "algorithm": "cpp",
+    "format": "cpp",
+    "unordered_set": "cpp",
+    "utility": "cpp"
   }
 }
