DRY up worker task handling (thread/popup/message/launch UI) into a new `Worker` class.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,9 @@
     "algorithm": "cpp",
     "format": "cpp",
     "unordered_set": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "memory_resource": "cpp",
+    "random": "cpp",
+    "semaphore": "cpp"
   }
 }
