Showing RealImpact listener points as spheres.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,10 @@
     "utility": "cpp",
     "memory_resource": "cpp",
     "random": "cpp",
-    "semaphore": "cpp"
+    "semaphore": "cpp",
+    "numbers": "cpp",
+    "*.ipp": "cpp",
+    "*.expression": "cpp",
+    "fft": "cpp"
   }
 }
