Add a geometry shader to get thick lines by rendering lines as quads. Add line width control for line-rendering mode.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,10 @@
     "numbers": "cpp",
     "*.ipp": "cpp",
     "*.expression": "cpp",
-    "fft": "cpp"
+    "fft": "cpp",
+    "hash_map": "cpp",
+    "valarray": "cpp",
+    "ranges": "cpp",
+    "*.inc": "cpp"
   }
 }
