--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,6 +93,7 @@
     "hash_map": "cpp",
     "valarray": "cpp",
     "ranges": "cpp",
-    "*.inc": "cpp"
+    "*.inc": "cpp",
+    "codecvt": "cpp"
   }
 }
