Dynamically create lights, in prep for add/remove lights in config.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,7 @@
     "valarray": "cpp",
     "ranges": "cpp",
     "*.inc": "cpp",
-    "codecvt": "cpp"
+    "codecvt": "cpp",
+    "future": "cpp"
   }
 }
