Change `Geometry/GridLines` to `Geometry/Primitive/Rec`, since that's what it is now.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,6 +95,16 @@
     "ranges": "cpp",
     "*.inc": "cpp",
     "codecvt": "cpp",
-    "future": "cpp"
+    "future": "cpp",
+    "__std_stream": "cpp",
+    "any": "cpp",
+    "cfenv": "cpp",
+    "condition_variable": "cpp",
+    "csignal": "cpp",
+    "forward_list": "cpp",
+    "shared_mutex": "cpp",
+    "source_location": "cpp",
+    "strstream": "cpp",
+    "typeindex": "cpp"
   }
 }
