--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -49,7 +49,6 @@ add_subdirectory(${Mesh2FaustDir})
 
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
-find_package(Bullet REQUIRED)
 
 include_directories(
     ${IMGUI_DIR}
@@ -68,7 +67,6 @@ include_directories(
     lib/libnpy/include
     lib/tetgen
     ${Mesh2FaustDir}/src
-    ${BULLET_INCLUDE_DIRS}
 )
 
 if(APPLE)
@@ -78,7 +76,7 @@ else()
 endif()
 
 # `dynamiclib` is faust.
-target_link_libraries(${PROJECT_NAME} PRIVATE OpenGL::GL GLEW::GLEW SDL3::SDL3 nfd dynamiclib mesh2faust tetgen ${BULLET_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PRIVATE OpenGL::GL GLEW::GLEW SDL3::SDL3 nfd dynamiclib mesh2faust tetgen reactphysics3d)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wno-elaborated-enum-base -DIMGUI_IMPL_OPENGL_LOADER_GLEW)
