Switch from reactphysics3d develop to master branch, since his wip convex hull impl errors in lots of cases atm. Bring in a separate convex hull impl (currently unused, since the convex hull triangles don't meet reactphysics3d's `PolyhedralMesh` requirements).

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -39,6 +39,7 @@ add_executable(${PROJECT_NAME}
     ${IMPLOT_DIR}/implot_items.cpp
     ${IMPLOT_DIR}/implot_demo.cpp
     lib/ImGuizmo/ImGuizmo.cpp
+    lib/quickhull/QuickHull.cpp
     ${SOURCES}
 )
 add_dependencies(${PROJECT_NAME} CopyResources)
@@ -66,6 +67,7 @@ include_directories(
     lib/date/include/date
     lib/libnpy/include
     lib/tetgen
+    lib/quickhull
     ${Mesh2FaustDir}/src
 )
 
