Switch back to reactphysics3d develop. Refactor convex hull generation to take a mode of either `QuickHull` or `RP3D`. Add 'Generate convex hull' to mesh controls, to generate and view a triangular version of either convex hull type.

--- a/.gitmodules
+++ b/.gitmodules
@@ -51,6 +51,7 @@
 [submodule "app/lib/reactphysics3d"]
 	path = app/lib/reactphysics3d
 	url = git@github.com:DanielChappuis/reactphysics3d.git
+	branch = develop
 [submodule "app/lib/quickhull"]
 	path = app/lib/quickhull
 	url = git@github.com:akuukka/quickhull.git
