Big refactor to use OpenMesh polygons as the source-of-truth mesh data structure, and derive all geometry data (e.g. for rendering) from it.
* Feature: Wireframe rendering now shows mixed polygon faces instead of showing the rendered triangles.
* All geometry data changes are now done through the OpenMesh `Mesh` instance.
  All other geometry data is derived from this mesh.
* Updated 2D extrusion to use quads for the sides and ngons for the top/bottom faces, instead of all tris.
* No longer need to manually find unique edges using a hash. This is built into OpenMesh.
* Generally working with polygons instead of triangles everywhere now -
  only raw geometry buffers (`Vertices`, `Indices`, `Normals`) are assumed triangular now.

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "app/lib/quickhull"]
 	path = app/lib/quickhull
 	url = git@github.com:akuukka/quickhull.git
+[submodule "app/lib/OpenMesh"]
+	path = app/lib/OpenMesh
+	url = https://gitlab.vci.rwth-aachen.de:9000/OpenMesh/OpenMesh.git
