Remove all axisymmetric code: All fortran code, UI paths for axisymmetric gen, CDT/earcut usage and dependencies.
I am not the author of the axisymmetric code, and it still lives in the OG project repo.
Also, I'd like to focus on 3D and reduce cruft.

--- a/app/lib/CMakeLists.txt
+++ b/app/lib/CMakeLists.txt
@@ -3,11 +3,7 @@
 set(SDL3_DIR ${CMAKE_CURRENT_SOURCE_DIR}/SDL)
 add_subdirectory(${SDL3_DIR})
 
-#=================== nativefiledialog ===================
-
-add_subdirectory(nativefiledialog)
-
-#=================== faust ===================
+#=================== Faust ===================
 
 # See [the docs](https://faustdoc.grame.fr/manual/embedding/#using-libfaust-with-the-llvm-backend) for general help.
 
@@ -37,7 +33,7 @@ target_compile_definitions(dynamiclib PUBLIC LLVM_BUILD_UNIVERSAL=1)
 
 #=================== Others ===================
 
-add_subdirectory(CDT/CDT)
+add_subdirectory(nativefiledialog)
 add_subdirectory(tetgen)
 add_subdirectory(reactphysics3d)
 add_subdirectory(OpenMesh)
