--- a/.gitmodules
+++ b/.gitmodules
@@ -21,6 +21,7 @@
 [submodule "lib/miniaudio"]
 	path = lib/miniaudio
 	url = git@github.com:mackron/miniaudio.git
+	branch = dev
 [submodule "lib/ImGuizmo"]
 	path = lib/ImGuizmo
 	url = git@github.com:CedricGuillemet/ImGuizmo.git
